--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "findit": "^2.0.0",
     "gm": "^1.23.0",
     "html-to-text": "^3.2.0",
+    "image-size": "^0.5.4",
     "jimp": "^0.2.27",
     "mkdirp": "^0.5.1",
     "moment": "^2.18.1",
